syntax = "proto3";
package prototypes;

option go_package = "proto;proto_storage";

message PKIndexItem
{
  int32 primary = 1;
  int32 pageNumber = 2;
  int64 offset = 3;
  int32 size = 4;
}

message PKIndexStore
{
  repeated PKIndexItem items = 1;
}